--- a/index.html
+++ b/index.html
@@ -3,25 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Malla Interactiva Enfermería</title>
+  <title>Malla Enfermería UdeC</title>
   <link rel="stylesheet" href="estilos.css">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script defer src="script.js"></script>
 </head>
 <body>
   <header>
-    <h1>Malla Interactiva - Enfermería UdeC</h1>
-    <div class="progreso">
-      <label for="barra-progreso">Progreso:</label>
+    <h1>Malla Curricular Enfermería - Universidad de Concepción</h1>
+    <div id="progreso-global">
+      <div>Créditos Aprobados: <span id="creditos-aprobados">0</span> / 226</div>
       <progress id="barra-progreso" value="0" max="100"></progress>
       <span id="porcentaje-progreso">0%</span>
     </div>
+    <canvas id="grafico-torta" width="200" height="200"></canvas>
   </header>
+
   <main id="contenedor-malla">
-    <!-- Aquí se insertarán dinámicamente los semestres y ramos -->
+    <!-- Semestres y ramos se inyectan por JS -->
   </main>
+
   <footer>
-    <p>Total Créditos Aprobados: <span id="creditos-aprobados">0</span> / <span id="creditos-totales">226</span></p>
-    <canvas id="grafico"></canvas>
+    <p>Desarrollado para uso académico - UdeC</p>
   </footer>
-  <script src="script.js"></script>
 </body>
 </html>
